@@ -11,3 +11,6 @@ Todo for 0.25:
         # of upgrades for all bases
         # per-tech time to completion (from day 0 to start, then time to completion)
     - Add more items.
+    - Get more items translatable.
+    - Get translations of really_destroy, detect_chance, cpu, cpu_per_day, money,
+        money_per_day
