@@ -8,6 +8,7 @@ USER-VISIBLE CHANGES:
 - Default language changeable via option screen. (emh)
 - Finance screen shows CPU usage now. (emh, multiple people for suggestion)
 - Options screen can be accessed after game start. (emh)
+- Changing the language from the option screen works now. (emh)
 
 OTHER CHANGES:
 - Deleted some extraneous images and optimized some others. (Phil)
